bynkc/tests/fixtures/positive/73_context_consumes_context/src/commerce/payment.bynk
context commerce.payment {
  exports transparent { PaymentError }

  type PaymentError = enum {
    Declined,
    InsufficientFunds,
  }
}
