bynkc/tests/fixtures/negative/54_uses_a_context/src/commerce/orders.bynk
context commerce.orders {
  uses commerce.payment
}
